# nextcloud-desktop

./: .drone.yml  CMakeLists.txt  NEXTCLOUD.cmake  VERSION.cmake  config.h.in  mirall.desktop.in  resources.qrc
.github/workflows/: sonarcloud.yml
RecipeThumbnailProvider/: Dll.cpp  RecipeThumbnailProvider.cpp  RecipeThumbnailProvider.vcxproj  ThumbnailProviderSample.sln
ThumbnailProviderShellExt/: ThumbnailProviderShellExt.sln
ThumbnailProviderShellExt/ShellExtensions/: ShellExtensions.vcxproj  dllmain.cpp
admin/win/msi/: Nextcloud.wxs  OEM.wxi.in
cmake/modules/: MacOSXBundleInfo.plist.in
enc_temp_folder/f33ede73ab2c927a94e845c3a7feea1/: main.cpp
package-with-identity/: AppxManifest.xml.in  CMakeLists.txt  SparsePackageTest.cer  SparsePackageTest.pvk  shell_ext_example.reg  sync_root_regs.reg
shell_integration/libcloudproviders/: CMakeLists.txt
shell_integration/windows/: CMakeLists.txt  WinShellExt.wxs.in  WinShellExtConstants.h.in
shell_integration/windows/CfAPI/: CMakeLists.txt  CfApiShellExtensions.CustomStateProvider.cpp  CloudMirror.CustomStateProvider.cpp  CloudMirror.CustomStateProvider.h  CustomStateProvider.winmd  cfapishellintegrationclassfactory.cpp  cfapishellintegrationclassfactory.h  contextmenus.cpp  contextmenus.h  customstateprovider.cpp  customstateprovider.h  customstateprovider.idl  dllmain.cpp  logger.cpp  logger.h  thumbnailprovider.cpp  thumbnailprovider.h
sparse_package_experiments/ConsoleApp1/: ConsoleApp1.sln
sparse_package_experiments/ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
sparse_package_experiments/ConsoleApp1/ConsoleApp1/Properties/: AssemblyInfo.cs
sparse_package_experiments/ConsoleApp1/MigrationBackup/ea606aae/ConsoleApp1/: ConsoleApp1.csproj  NuGetUpgradeLog.html  packages.config
sparse_package_experiments/sparse-package-test/: AppxManifest.xml
src/: CMakeLists.txt
src/CfAPI/: CMakeLists.txt  CustomStateProvider.winmd  contextmenus.cpp  customstateprovider.cpp  customstateprovider.h  main.cpp  sparce-package-extension-side-by-side.manifest.in  thumbnailprovider.cpp  thumbnailprovider.h
src/common/: utility.cpp  utility.h  utility_mac.cpp  utility_unix.cpp  utility_win.cpp
src/csync/: CMakeLists.txt  csync_exclude.cpp
src/gui/: CMakeLists.txt  UserStatusSelector.qml  UserStatusSelectorPage.qml  accountstate.cpp  application.cpp  application.h  configgui.h.in  folder.cpp  folder.h  folderman.cpp  folderman.h  folderstatusdelegate.cpp  folderstatusmodel.cpp  folderwatcher.cpp  main.cpp  networksettings.cpp  selectivesyncdialog.cpp  sharemanager.cpp  syncrunfilelog.cpp
src/gui/creds/: webflowcredentialsdialog.cpp
src/gui/shellextensions/: CMakeLists.txt  CfApiShellExtensions.CustomStateProvider.h  CustomStateProvider.winmd  ShellServices.cpp  contextmenus.cpp  contextmenus.h  customstateprovider.cpp
src/gui/socketapi/: socketapi.cpp
src/gui/tray/: FileActivityDialog.qml  MainTrayView.qml  UnifiedSearchResultItemSkeleton.qml  UnifiedSearchResultItemSkeletonContainer.qml  UserLine.qml  Window.qml  activitydata.cpp  activitydata.h  activitylistmodel.cpp  activitylistmodel.h  notificationhandler.cpp  unifiedsearchresultslistmodel.cpp  unifiedsearchresultslistmodel.h  usermodel.cpp  usermodel.h
src/gui/wizard/: webview.cpp  webviewpage.cpp
src/libsync/: CMakeLists.txt  abstractnetworkjob.cpp  discovery.cpp  discoveryphase.cpp  networkjobs.cpp  owncloudpropagator.cpp  propagatedownload.cpp
src/libsync/vfs/cfapi/: CMakeLists.txt  cfapiwrapper.cpp  cfapiwrapper.h  vfs_cfapi.cpp
src/libsync/vfs/cfapi/shellextensions/: CMakeLists.txt  ClassFactory.h  CustomStateProvider.winmd  ShellServices.cpp  thumbnailprovider.cpp
test/: CMakeLists.txt  nextcloud_add_test.cmake  testexcludedfiles.cpp
theme/Style/: Style.qml
